<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.DetaiUserFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/detail_user"
        android:textColor="@color/color_4"
        android:textSize="20dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:background="@color/color_3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Section 1"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageView
                    android:id="@+id/img_section_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@id/tv_1"
                    android:src="@mipmap/ic_down" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_section_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <LinearLayout
                    android:id="@+id/layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/name"
                        android:gravity="center"
                        android:textColor="@color/color_5"
                        android:paddingRight="10dp"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:id="@+id/tv_name_user"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_5"
                        android:paddingLeft="5dp"
                        android:textSize="20dp">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_company"
                    android:layout_below="@id/layout_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/company"
                        android:gravity="center"
                        android:textColor="@color/color_5"
                        android:paddingRight="10dp"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:id="@+id/tv_company_user"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_5"
                        android:paddingLeft="5dp"
                        android:textSize="20dp">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_location"
                    android:layout_below="@id/layout_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:gravity="center"
                        android:textColor="@color/color_5"
                        android:paddingRight="10dp"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:id="@+id/tv_location_user"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_5"
                        android:paddingLeft="5dp"
                        android:textSize="20dp">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_blog"
                    android:layout_below="@id/layout_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/blog"
                        android:gravity="center"
                        android:textColor="@color/color_5"
                        android:paddingRight="10dp"
                        android:textSize="20dp">

                    </TextView>

                    <TextView
                        android:id="@+id/tv_blog_user"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/color_5"
                        android:paddingLeft="5dp"
                        android:textSize="20dp">

                    </TextView>

                </LinearLayout>






            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="80dp"
                android:background="@color/color_3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Section 2"
                    android:textColor="@color/white"
                    android:textSize="20dp" />



                <ImageView
                    android:id="@+id/img_section_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerInParent="true"
                    android:layout_toRightOf="@id/tv_2"
                    android:src="@mipmap/ic_down" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_section_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>

                <TextView
                    android:id="@+id/tv_fl_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/color_4"
                    android:text="@string/follower_from_url"/>

                <TextView
                    android:id="@+id/tv_fl_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/color_4"
                    android:text="@string/follower_from_followers_url"/>

            </LinearLayout>



        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>